# LectureNoteAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_pdf.py  wsgi.py
src/lecture_note_agent/: __init__.py  agent.py  cli.py  config.py  docx_utils.py  io_utils.py  models.py  pdf_utils.py  prompts.py  ui.py
src/lecture_note_agent/web/: admin.py  app.py  auth.py  database.py  routes.py  storage.py
src/lecture_note_agent/web/static/css/: app.css
src/lecture_note_agent/web/static/js/: app.js
src/lecture_note_agent/web/templates/: base.html  dashboard.html  login.html  new_project.html  project.html  register.html  settings.html
src/lecture_note_agent/web/templates/admin/: change_password.html  edit_user.html  global_settings.html  index.html  pricing.html  registrations.html  user_projects.html  users.html
tests/: test_agent_model_file_ocr.py  test_cli.py  test_docx_output.py
